--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
+#spring.datasource.username=tharahantharmaraja
+#spring.datasource.password=thahesh29
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
